<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">DayDream</string>
    <string name="about">The restaurant, since the very first day, was a gathering place for
        Vilnius bohema and intellectuals. DayDream has saved its style  and spirit through many years,
        therefore it attracts both old visitors and modern youth.</string>
    <string name="welcome">Welcome to DayDream</string>
    <string name="adminradio">Admin</string>
    <string name="userradio">User</string>
    <string name="nameHint">userName</string>
    <string name="passHint">Password</string>
    <string name="EmailHint">Email</string>
    <string name="addressHint">Address</string>
    <string name="phoneHint">Phone</string>
    <string name="RegisterTxt">Register</string>
    <string name="RegisterForm">SIGN UP</string>
    <string name="registerInLogin">Don\'t Have Account ?</string>
    <string name="addFood">Add</string>
    <string name="addFoodname">Name</string>
    <string name="addprice">Price</string>
    <string name="addphoto">photo</string>
    <string name="addcategory">ADD CATEGORY</string>
    <string name="categoryLabel">Manage Categories</string>
    <string name="foodLabel">Manage Foods</string>
    <string name="roombtn">Add Contacts</string>
    <string name="roomname">add Contact</string>
    <string name="delcategory">ENTER NAME TO DELETE</string>
    <string name="chatLabel">LIVE CHAT</string>
    <string name="delFood">CLICK TO DELETE FOOD</string>
    <string name="aboutus">ABOUT US</string>

</resources>
