<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mohamednagy.restaurant_project.Register">

    <EditText
        android:id="@+id/userNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nameHint"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/passWordRegister"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <EditText
        android:id="@+id/passWordRegister"
        android:layout_width="wrap_content"
        android:hint="@string/passHint"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="126dp" />

    <EditText
        android:id="@+id/EmailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EmailHint"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passWordRegister" />

    <EditText
        android:id="@+id/addressRegister"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/addressHint"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/EmailRegister" />

    <EditText
        android:id="@+id/phoneRegister"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:hint="@string/phoneHint"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressRegister" />


    <Button
        android:id="@+id/Registerbtn"
        android:text="@string/RegisterTxt"
        android:layout_width="193dp"
        android:layout_height="41dp"
        android:textAlignment="center"
        android:fontFamily="sans-serif-smallcaps"
        android:background="@color/register_loginBtn"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="34dp"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="19dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneRegister">

        <RadioButton
            android:id="@+id/adminRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:text="@string/adminradio" />

        <RadioButton
            android:id="@+id/userRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/userradio" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/titleRegister"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/RegisterForm"
        android:layout_marginRight="1dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.00999999"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <ImageView
        android:id="@+id/usernameTick"
        android:layout_width="18dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/userNameRegister"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/tick"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.101" />

    <ImageView
        android:id="@+id/usernameFalse"
        android:layout_width="18dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/wrong"
        android:layout_marginRight="84dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.101"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/userNameRegister"
        app:layout_constraintHorizontal_bias="1.0" />


    <ImageView
        android:id="@+id/passwordTick"
        android:layout_width="18dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/tick"
        app:layout_constraintLeft_toRightOf="@+id/passWordRegister"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.246" />

    <ImageView
        android:id="@+id/passwordFalse"
        android:layout_width="18dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/wrong"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/passWordRegister"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintVertical_bias="0.246" />

    <ImageView
        android:id="@+id/EmailTick"
        android:layout_width="18dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/tick"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/EmailRegister"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.387" />

    <ImageView
        android:id="@+id/EmailFalse"
        android:layout_width="18dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/wrong"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/EmailRegister"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.713"
        app:layout_constraintVertical_bias="0.387" />

    <ImageView
        android:id="@+id/addressTick"
        android:layout_width="18dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/tick"
        app:layout_constraintLeft_toRightOf="@+id/addressRegister"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.523" />

    <ImageView
        android:id="@+id/addressFalse"
        android:layout_width="18dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/wrong"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/addressRegister"
        app:layout_constraintRight_toLeftOf="@+id/addressTick"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.523" />

    <ImageView
        android:id="@+id/phoneTick"
        android:layout_width="18dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/tick"
        app:layout_constraintLeft_toRightOf="@+id/phoneRegister"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.674" />

    <ImageView
        android:id="@+id/phoneFalse"
        android:layout_width="18dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/wrong"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/phoneRegister"
        app:layout_constraintRight_toLeftOf="@+id/phoneTick"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.66999996" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="47dp"
        android:layout_height="39dp"
        app:srcCompat="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="528dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toLeftOf="@+id/txtView"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>
