<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mohamednagy.restaurant_project.Login">

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="userName"
        android:textAlignment="center"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/passWord"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.564" />

    <EditText
        android:hint="Password"
        android:textAlignment="center"
        android:id="@+id/passWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="234dp" />

    <Button
        android:id="@+id/login"
        android:background="@color/register_loginBtn"
        android:layout_width="193dp"
        android:layout_height="41dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="55dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.788"
        tools:layout_editor_absoluteY="329dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="51dp"
        android:layout_height="47dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="183dp"
        android:layout_height="25dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="serif"
        android:inputType="textPersonName"
        android:text="@string/welcome"
        android:textSize="16dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="136dp"
        android:layout_height="21dp"
        android:ems="10"
        android:text="@string/registerInLogin"
        android:layout_marginStart="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="91dp"
        tools:layout_editor_absoluteX="124dp" />

    <Button
        android:id="@+id/registerFromLogin"
        android:layout_width="71dp"
        android:layout_height="19dp"
        android:background="@color/register_loginBtn"
        android:text="@string/RegisterTxt"
        android:textSize="12sp"

        android:layout_marginRight="45dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="93dp" />

</android.support.constraint.ConstraintLayout>
